--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -32,9 +32,7 @@ jobs:
           git fetch --tags
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
           echo "Latest tag: $latest_tag"
-
           IFS='.' read -r major minor patch <<< "${latest_tag#v}"
-
           # Increment patch until new tag does not exist
           while true; do
             patch=$((patch + 1))
@@ -43,17 +41,14 @@ jobs:
               break
             fi
           done
-
           echo "New tag: $new_tag"
           echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
-
       # 3️⃣ Configure Git (main branch only)
       - name: Configure Git user
         if: github.ref == 'refs/heads/main'
         run: |
           git config user.name "Harshavardhana"
           git config user.email "your-email@example.com"
-
       # 4️⃣ Push Git tag (main only)
       - name: Push Git tag
         if: github.ref == 'refs/heads/main'
@@ -62,7 +57,6 @@ jobs:
         run: |
           git tag -a "${{ steps.set-version.outputs.new_tag }}" -m "Release ${{ steps.set-version.outputs.new_tag }}"
           git push origin "${{ steps.set-version.outputs.new_tag }}"
-
       # 5️⃣ Create GitHub release (main only)
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
@@ -102,12 +96,15 @@ jobs:
       - name: Set Docker tag
         id: docker-tag
         run: |
-          if [ "${GITHUB_REF##*/}" = "main" ]; then
-            echo "docker_tag=${{ steps.set-version.outputs.new_tag }}" >> $GITHUB_ENV
+          branch="${GITHUB_REF##*/}"
+          new_tag="${{ steps.set-version.outputs.new_tag }}"
+          if [ "$branch" = "main" ]; then
+          echo "docker_tag=$new_tag" >> $GITHUB_ENV
           else
-            echo "docker_tag=${GITHUB_REF##*/}" >> $GITHUB_ENV
-          fi  
-
+          # Combine branch name with version tag
+          echo "docker_tag=${branch}-${new_tag}" >> $GITHUB_ENV
+          fi
+          
       # 1️⃣1️⃣ Build and push Docker image
       - name: Build and Push Docker image
         uses: docker/build-push-action@v4
@@ -116,3 +113,4 @@ jobs:
           file: Dockerfile1
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
+Update build-docker.yaml ·
