--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -25,7 +25,36 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 2️⃣ Determine new version
+      # 2️⃣ Setup JDK for Maven
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+          cache: 'maven'
+
+      # 3️⃣ Build Maven project
+      - name: Build with Maven
+        run: mvn clean install -DskipTests
+
+      # 4️⃣ Setup Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 5️⃣ Docker login (main branch only)
+      - name: Login to Docker Hub
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # 6️⃣ Build Docker image
+      - name: Build Docker image
+        run: |
+          docker build -t boardgame-temp -f Dockerfile1 .
+
+      # 7️⃣ Set Version (only after successful build)
       - name: Set Version
         id: set-version
         run: |
@@ -40,48 +69,21 @@ jobs:
               break
             fi
           done
-          echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
-
-      # 3️⃣ Setup JDK for Maven
-      - name: Set up JDK 11
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-          cache: 'maven'
-
-      # 4️⃣ Build Maven project
-      - name: Build with Maven
-        run: mvn clean install -DskipTests
-
-      # 5️⃣ Setup Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # 6️⃣ Docker login (only for main)
-      - name: Login to Docker Hub
-        if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # 7️⃣ Set Docker tag
-      - name: Set Docker tag
-        id: docker-tag
-        run: |
           branch="${GITHUB_REF##*/}"
-          new_tag="${{ steps.set-version.outputs.new_tag }}"
           if [ "$branch" = "main" ]; then
-            echo "docker_tag=$new_tag" >> $GITHUB_ENV
+            docker_tag="${new_tag}"
           else
-            echo "docker_tag=${branch}-${new_tag}" >> $GITHUB_ENV
+            docker_tag="${branch}-${new_tag}"
           fi
+          echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
+          echo "docker_tag=$docker_tag" >> $GITHUB_ENV
+          echo "Branch: $branch"
+          echo "Docker Tag: $docker_tag"
 
-      # 8️⃣ Build Docker image (always)
-      - name: Build Docker image
+      # 8️⃣ Tag Docker image
+      - name: Tag Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }} -f Dockerfile1 .
+          docker tag boardgame-temp ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
 
       # 9️⃣ Push Docker image (only for main)
       - name: Push Docker image
@@ -89,14 +91,14 @@ jobs:
         run: |
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
 
-      # 🔟 Configure Git for tagging (only main, after Docker push)
+      # 🔟 Configure Git for tagging (only main)
       - name: Configure Git user
         if: github.ref == 'refs/heads/main'
         run: |
           git config user.name "Harshavardhana"
           git config user.email "your-email@example.com"
 
-      # 1️⃣1️⃣ Push Git tag (only after successful Docker push)
+      # 1️⃣1️⃣ Push Git tag (after Docker build & tag creation)
       - name: Push Git tag
         if: github.ref == 'refs/heads/main'
         env:
@@ -105,7 +107,7 @@ jobs:
           git tag -a "${{ steps.set-version.outputs.new_tag }}" -m "Release ${{ steps.set-version.outputs.new_tag }}"
           git push origin "${{ steps.set-version.outputs.new_tag }}"
 
-      # 1️⃣2️⃣ Create GitHub Release (only after tag pushed)
+      # 1️⃣2️⃣ Create GitHub Release (after tag pushed)
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
         uses: actions/create-release@v1
