--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -37,43 +37,22 @@ jobs:
       - name: Fetch all tags
         run: git fetch --tags
 
+      # 4️⃣ Set Version
       - name: Set Version
         id: set-version
         run: |
-          git fetch --tags
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
-
+          echo "Latest tag: $latest_tag"
           IFS='.' read -r major minor patch <<< "${latest_tag#v}"
           while true; do
-          patch=$((patch + 1))
-          new_tag="v${major}.${minor}.${patch}"
-          if ! git rev-parse "$new_tag" >/dev/null 2>&1; then
-          break
-          fi
+            patch=$((patch + 1))
+            new_tag="v${major}.${minor}.${patch}"
+            if ! git rev-parse "$new_tag" >/dev/null 2>&1; then
+              break
+            fi
           done
-
-          branch="${GITHUB_REF##*/}"
-          if [ "$branch" = "main" ]; then
-          docker_tag="${new_tag}"
-          else
-          docker_tag="${branch}-${new_tag}"
-          fi
-
-          echo "Version Details:"
-          echo "  Latest Tag  : $latest_tag"
-          echo "  New Tag     : $new_tag"
-          echo "  Branch      : $branch"
-          echo "  Docker Tag  : $docker_tag"
-
-    # Export outputs for later steps
-    {
-      echo "new_tag=$new_tag"
-      echo "docker_tag=$docker_tag"
-    } >> "$GITHUB_OUTPUT"
-
-    # Export env variable
-    echo "docker_tag=$docker_tag" >> $GITHUB_ENV
-
+          echo "New tag: $new_tag"
+          echo "new_tag=$new_tag" >> "$GITHUB_OUTPUT"
       # 5️⃣ Prepare POM version (branch-aware)
       - name: Prepare POM version
         id: prepare-pom
@@ -91,7 +70,6 @@ jobs:
           
           echo "POM version: $pom_version"
           echo "pom_version=$pom_version" >> "$GITHUB_OUTPUT"
-
       # 6️⃣ Update pom.xml version (before build)
       - name: Update pom.xml version
         run: mvn versions:set -DnewVersion=${{ steps.prepare-pom.outputs.pom_version }} -DgenerateBackupPoms=false
@@ -130,12 +108,10 @@ jobs:
             docker_tag="${branch}-${{ steps.set-version.outputs.new_tag }}"
           fi
           echo "docker_tag=$docker_tag" >> $GITHUB_ENV
-
       # 1️⃣3️⃣ Tag Docker image
       - name: Tag Docker image
         run: |
           docker tag boardgame-temp ${{ secrets.DOCKERHUB_USERNAME }}/boardgame-fromgit:${{ env.docker_tag }}
-
       # 1️⃣4️⃣ Push Docker image (main branch only)
       - name: Push Docker image
         if: github.ref == 'refs/heads/main'
@@ -147,7 +123,6 @@ jobs:
         run: |
           git config user.name "Harshavardhana"
           git config user.email "your-email@example.com"
-
       # 1️⃣6️⃣ Push Git tag (main only)
       - name: Push Git tag
         if: github.ref == 'refs/heads/main'
@@ -156,7 +131,6 @@ jobs:
         run: |
           git tag -a "${{ steps.set-version.outputs.new_tag }}" -m "Release ${{ steps.set-version.outputs.new_tag }}"
           git push origin "${{ steps.set-version.outputs.new_tag }}"
-
       # 1️⃣7️⃣ Create GitHub Release (main only)
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
@@ -168,3 +142,4 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+updating pomxml file with version · HarshaVardhana4066/maven-
